Bug 1197765 - Compare text content inside frame instead of the content node for ruby autohiding. r=dbaron

--HG--
extra : source : d265d1e03757b1f886e435ef9b60aa962787e676